week2 assignment revision & adding week3 directory

--- a/-week2/week2_assignment_xcode/week2_assignment/Base.lproj/Main.storyboard
+++ b/-week2/week2_assignment_xcode/week2_assignment/Base.lproj/Main.storyboard
@@ -28,9 +28,11 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zwf-0o-Jpy">
-                                <rect key="frame" x="40" y="764" width="310" height="30"/>
+                                <rect key="frame" x="40" y="762" width="310" height="32"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <state key="normal" title="Show Another Fun Fact">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" red="0.0" green="0.89411764709999997" blue="0.59215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="showFunFact:" destination="BYZ-38-t0r" eventType="touchUpInside" id="goS-Dn-dZx"/>
